--- a/blog-item.html
+++ b/blog-item.html
@@ -100,7 +100,7 @@
                                         <span class="label label-primary">WordPress</span>
                                         <span class="label label-primary">Joomla</span>
                                     </p>
-                                    <div class="content">
+                                    <div class="comment">
                                         <div class="media">
                                           <div class="pull-left">
                                             <img class="media-object img-thumbnail" src="images/blog/avatar.jpg" alt="...">
@@ -111,6 +111,78 @@
                                           </div>
                                         </div>
                                     </div>
+                                    <h3>3 Comments</h3>
+                                    <div>
+                                        <div class="media">
+                                          <div class="pull-left">
+                                            <img class="media-object img-circle" src="images/blog/avatar1.png" alt="...">
+                                          </div>
+                                          <div class="media-body">
+                                            <div class="comment">
+                                                <div class="row">
+                                                    <div class="col-xs-8">
+                                                        <strong>John Doe </strong><h6>27 Aug 2013</h6>
+                                                    </div>
+                                                    <div class="col-xs-4">
+                                                        <h5 class="text-right"><i class="fa fa-repeat"></i> Reply</h5>
+                                                    </div>
+                                                </div>
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam cum, modi in quos ab obcaecati quis laboriosam porro voluptatibus illum cupiditate quas eius eligendi similique voluptate molestiae dolorem fuga possimus?</p>
+                                            </div>
+                                            <div class="">
+                                                <div class="media">
+                                                  <div class="pull-left">
+                                                    <img class="media-object img-circle" src="images/blog/avatar3.png" alt="...">
+                                                  </div>
+                                                  <div class="media-body comment">
+                                                    <div class="row">
+                                                        <div class="col-xs-8">
+                                                            <strong>John Doe </strong><h6>27 Aug 2013</h6>
+                                                        </div>
+                                                        <div class="col-xs-4">
+                                                            <h5 class="text-right"><i class="fa fa-repeat"></i> Reply</h5>
+                                                        </div>
+                                                    </div>
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam cum, modi in quos ab obcaecati quis laboriosam porro voluptatibus illum cupiditate quas eius eligendi similique voluptate molestiae dolorem fuga possimus?</p>
+                                                  </div>
+                                                </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="media">
+                                          <div class="pull-left">
+                                            <img class="media-object img-circle" src="images/blog/avatar2.png" alt="...">
+                                          </div>
+                                          <div class="media-body comment">
+                                            <div class="row">
+                                                <div class="col-xs-8">
+                                                    <strong>John Doe </strong><h6>27 Aug 2013</h6>
+                                                </div>
+                                                <div class="col-xs-4">
+                                                    <h5 class="text-right"><i class="fa fa-repeat"></i> Reply</h5>
+                                                </div>
+                                            </div>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam cum, modi in quos ab obcaecati quis laboriosam porro voluptatibus illum cupiditate quas eius eligendi similique voluptate molestiae dolorem fuga possimus?</p>
+                                          </div>
+                                        </div>
+                                    </div>
+                                    <h3>Leave a comment</h3>
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            <input type="text" class="form-control" placeholder="Name">
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <input type="text" class="form-control" placeholder="Email">
+                                        </div>
+                                    </div>
+                                    <div class="row mt-2">
+                                        <div class="col-xs-12">
+                                            <textarea class="form-control" rows="5" placeholder="Comment"></textarea>
+                                        </div>
+                                    </div>
+                                    <button type="button" class="btn btn-danger mt-2">Submit Comment</button>
                                 </div>
                             </div>
                         </div>
@@ -181,25 +253,6 @@
                     <h3>Facebook fanpage</h3>
                 </div>
             </div>
-            <nav>
-              <ul class="pagination">
-                <li>
-                  <a href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                  </a>
-                </li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li>
-                  <a href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
         </div>
     </section>
 
