--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="box-white">
-                                <img src="images/blog/blog1.jpg" alt="">
+                                <img class="img-full" src="images/blog/blog1.jpg" alt="">
                                 <div class="article">
                                     <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                                     <h6><i class="fa fa-user"></i> Jhon</h6>
@@ -96,7 +96,7 @@
                                 </div>
                             </div>
                             <div class="box-white mt-2">
-                                <img src="images/blog/blog2.jpg" alt="">
+                                <img class="img-full" src="images/blog/blog2.jpg" alt="">
                                 <div class="article">
                                     <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                                     <h6><i class="fa fa-user"></i> Jhon</h6>
@@ -118,7 +118,7 @@
                                 <span class="input-group-btn">
                                     <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                                 </span>
-                            </div><!-- /input-group -->
+                            </div>
                         </div>
                     </div>
                     <div class="row mt-5">
