Agregando texto en footer, comentarios en blog item

--- a/about-us.html
+++ b/about-us.html
@@ -86,27 +86,27 @@
                 <div class="col-sm-6">
                     <h3>Our Skills</h3>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                      <div class="progress-bar progress-bar-danger vertical-centered-text" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                         HTML/CSS
                       </div>
                     </div>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                      <div class="progress-bar progress-bar-success vertical-centered-text" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                         Wordpress
                       </div>
                     </div>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                      <div class="progress-bar vertical-centered-text" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
                         Joomla
                       </div>
                     </div>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 55%">
+                      <div class="progress-bar progress-bar-info vertical-centered-text" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 55%">
                         Drupal
                       </div>
                     </div>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
+                      <div class="progress-bar progress-bar-warning vertical-centered-text" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
                         PHP
                       </div>
                     </div>
@@ -119,10 +119,10 @@
             <div class="row text-center">
                 <div class="col-sm-12">
                     <h3>Meet the Team</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sit amet, consectetur adipisicing elit  consectetur adipisicing elit. <p>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center mt-2">
                 <div class="col-sm-3">
                     <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
                     <p>David J. Robbins</p>
@@ -242,48 +242,48 @@
           <div class="col-md-3 fila">
             <h3>Company</h3>
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>The company</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Our Team</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Our Partners</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Our Services</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Faq</span>
             </a>
 
              <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Contact Us</span>
             </a>
 
              <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Privacy Policy</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Terms of Use</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Copyright</span>
             </a>
           </div>
 
@@ -296,7 +296,8 @@
             </a>  
             </div>
             <div class="col-md-8">
-                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 17 Aug 2013</h6>
             </div>
             </div>
 
@@ -307,7 +308,8 @@
             </a>  
             </div>
             <div class="col-md-8">
-                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 13 Sep 2013</h6>
             </div>
             </div>
 
@@ -318,7 +320,8 @@
             </a>  
             </div>
             <div class="col-md-8">
-                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 11 Jul 2013</h6>
             </div>
             </div>
         </div>
@@ -333,7 +336,7 @@
             <div class="input-group">
             <input type="text" class="form-control" placeholder="Enter your email">
             <span class="input-group-btn">
-            <button class="btn btn-default" type="button">Go!</button>
+            <button class="btn btn-danger" type="button">Go!</button>
             </span>
             </div>
             </div>
@@ -343,12 +346,13 @@
     </div>
 
     <footer>
-    <div class="row">
-    <div class="col-md-6">
-        <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
-    </div>
-    <div class="col-md-6 footer-nav">
-        <ul class="nav navbar-nav navbar-right">
+        <div class="container">
+            <div class="row vertical-centered-text ">
+                <div class="col-md-6">
+                    <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+                </div>
+                <div class="col-md-6 footer-nav">
+                    <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a class="page-scroll" href="#about">Home</a>
                         </li>
@@ -358,9 +362,10 @@
                         <li>
                             <a class="page-scroll" href="#portfolio">Contact Us</a>
                         </li>
-        </ul>
-    </div>
-    </div>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
