--- a/blog-item.html
+++ b/blog-item.html
@@ -194,7 +194,7 @@
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Search">
                                 <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+                                    <button class="btn btn-danger" type="button"><i class="fa fa-search"></i></button>
                                 </span>
                             </div><!-- /input-group -->
                         </div>
@@ -266,48 +266,48 @@
           <div class="col-md-3 fila">
             <h3>Company</h3>
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>The company</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Our Team</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Our Partners</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Our Services</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Faq</span>
             </a>
 
              <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Contact Us</span>
             </a>
 
              <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Privacy Policy</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Terms of Use</span>
             </a>
 
             <a href="">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span>Finanzas y Fiscalizacion</span>
+            <i class="fa fa-angle-right"></i>
+            <span>Copyright</span>
             </a>
           </div>
 
@@ -320,7 +320,8 @@
             </a>  
             </div>
             <div class="col-md-8">
-                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 17 Aug 2013</h6>
             </div>
             </div>
 
@@ -331,7 +332,8 @@
             </a>  
             </div>
             <div class="col-md-8">
-                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 13 Sep 2013</h6>
             </div>
             </div>
 
@@ -342,7 +344,8 @@
             </a>  
             </div>
             <div class="col-md-8">
-                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 11 Jul 2013</h6>
             </div>
             </div>
         </div>
@@ -357,7 +360,7 @@
             <div class="input-group">
             <input type="text" class="form-control" placeholder="Enter your email">
             <span class="input-group-btn">
-            <button class="btn btn-default" type="button">Go!</button>
+            <button class="btn btn-danger" type="button">Go!</button>
             </span>
             </div>
             </div>
@@ -367,12 +370,13 @@
     </div>
 
     <footer>
-    <div class="row">
-    <div class="col-md-6">
-        <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
-    </div>
-    <div class="col-md-6 footer-nav">
-        <ul class="nav navbar-nav navbar-right">
+        <div class="container">
+            <div class="row vertical-centered-text ">
+                <div class="col-md-6">
+                    <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+                </div>
+                <div class="col-md-6 footer-nav">
+                    <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a class="page-scroll" href="#about">Home</a>
                         </li>
@@ -382,9 +386,10 @@
                         <li>
                             <a class="page-scroll" href="#portfolio">Contact Us</a>
                         </li>
-        </ul>
-    </div>
-    </div>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
