--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
   <body>
     
@@ -259,51 +260,19 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
       </div>
       <div class="col-md-3 fila">
-        <h3>Company</h3>
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-         <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-         <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
+      <h3>Company</h3>
+                            <ul>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Development</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
+                            </ul>
+     
       </div>
 
       <div class="col-md-3">
