--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head><!--/head-->
 <body>
     
@@ -64,19 +65,20 @@
         </div>
     </nav>
 
-    <div class="portfolio">
+     <section class="cabecera-verde">
         <div class="container">
-        <div class="row">
-            <div class="col-md-7">
-            <h1>Portfolio</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor.</p>  
-            </div>
-            <div class="col-md-5">
+            <div class="row vertical-centered-text">
+                <div class="col-sm-8">
+                    <h2>Portfolio</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore</p>
+                </div>
+                <div class="col-sm-4 text-right">
+                    <a href="index.html"><strong>Home</strong></a> | Portfolio
+                </div>
             </div>
         </div>
-        </div>
-    </div>
+    </section>
 
     <div class="trabajos">
         <div class="container">
@@ -155,50 +157,17 @@
       </div>
       <div class="col-md-3 fila">
         <h3>Company</h3>
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-         <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-         <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
-
-        <a href="">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span>Finanzas y Fiscalizacion</span>
-        </a>
+        <ul>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Development</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
+                            </ul>
       </div>
 
       <div class="col-md-3">
